- fixed project details image size on mobile

--- a/src/sections/Cases/Details/Details.module.scss
+++ b/src/sections/Cases/Details/Details.module.scss
@@ -121,7 +121,7 @@
 
         .sliderImageContainer {
             width: 355px !important;
-            height: 255px;
+            height: auto;
 
             img {
                 width: 100%;
